--- a/src/main/webapp/app/home/home.scss
+++ b/src/main/webapp/app/home/home.scss
@@ -1,6 +1,9 @@
 /* ==========================================================================
 Main page styles
 ========================================================================== */
+agm-map {
+  height: 300px;
+}
 
 .hipster {
   display: inline-block;
