--- a/src/main/webapp/content/scss/vendor.scss
+++ b/src/main/webapp/content/scss/vendor.scss
@@ -11,4 +11,6 @@ eg $input-color: red;
 @import '~bootstrap/scss/bootstrap';
 @import '~bootswatch/dist/solar/bootswatch';
 
+@import 'src/main/webapp/content/scss/rtl.scss';
+
 /* jhipster-needle-scss-add-vendor JHipster will add new css style */
